{
  "@@locale": "en",
  "appTitle": "Zenit",
  "home": "Home",
  "statistics": "Statistics",
  "history": "History",
  "settings": "Settings",
  "generalSettings": "General Settings",
  "languages": "Language",
  "chooseLanguage": "Choose language",
  "english": "English",
  "vietnamese": "Vietnamese",
  "appVersion": "App version",
...
  "categoryManagement": "Category management",
  "moneySourceManagement": "Money source management",
  "notifications": "Notifications",
  "security": "Security",
  "supportCenter": "Support center",
  "privacyPolicyAndTerms": "Privacy policy and terms",
  "logout": "Logout",
  "logoutConfirmTitle": "Confirm logout",
  "logoutConfirmMessage": "Are you sure you want to log out?",
  "logoutSuccess": "Logged out successfully",
  "notificationsTitle": "Notifications",
  "comingSoon": "Coming soon",

...
