...
      context: context,
      title: context.l10n.addTransaction,
      showCloseButton: false,
      showDragHandle: true,
      headerActions: [
        IconButton(
          key: const ValueKey('transaction-submit-button'),
          onPressed: () => _handleCreateTransaction(getFormData),
          icon: Icon(
            Icons.check_circle_outline_rounded,
            color: Theme.of(context).primaryColor,
            size: 28,
          ),
...
